Updating the register at 250907_150916

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -790,6 +790,7 @@
   "H. Kloesel.": "Hans Kloesel",
   "H. Kortenbeutel.": "Heinz Kortenbeutel",
   "H. Lamer.": "Hans Lamer",
+  "H. Leisegang.": "Hans Leisegang",
   "H. Meyer.": "Herbert Meyer",
   "H. Pomtow.": "Hans Pomtow",
   "H. R. Breitenbach.": "Hans Rudolf Breitenbach",
@@ -1002,6 +1003,7 @@
   "J. Friedrich.": "Johannes Friedrich",
   "J. Geffcken.": "Johannes Geffcken| (Philologe)",
   "J. Hirschberg.": "Julius Hirschberg",
+  "J. Jüthner.": "Julius Jüthner",
   "J. Keil.": "Josef Keil",
   "J. Kirchner.": "Johannes Kirchner",
   "J. Miller.": "Julius Miller",
@@ -1725,6 +1727,7 @@
   "Riess.": "Ernst Riess",
   "Riewald": "Paul Riewald",
   "Ritterling": "Emil Ritterling",
+  "Ritterling.": "Emil Ritterling",
   "Rob. Grosse.": "Robert Grosse",
   "Robert": "Carl Robert",
   "Robert Böker.": "Robert Böker",
@@ -2088,6 +2091,7 @@
   "W. Hoffmann.": "Wilhelm Hoffmann",
   "W. Kroll.": "Wilhelm Kroll",
   "W. Kubitschek †.": "Wilhelm Kubitschek",
+  "W. Kubitschek.": "Wilhelm Kubitschek",
   "W. L. Westermann.": "William Linn Westermann",
   "W. Morel.": "Willy Morel",
   "W. Peek.": "Werner Peek",
