adding combi author Daebritz-Funaioli.

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -333,6 +333,10 @@
   "D. H. Müller.": "David Heinrich von Müller",
   "Daebritz": "Rudolf Daebritz",
   "Daebritz.": "Rudolf Daebritz",
+  "Daebritz-Funaioli.": [
+    "Rudolf Daebritz",
+    "Gino Funaioli"
+  ],
   "Dahlmann": "Hellfried Dahlmann",
   "Dahms.": "Rudolf Dahms| (1880–1959)",
   "Daicoviciu": "Constantin Daicoviciu",
