Updating the register at 250909_081244

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -332,11 +332,11 @@
   "D. Cauer.": "Detlef Cauer",
   "D. H. Müller.": "David Heinrich von Müller",
   "Daebritz": "Rudolf Daebritz",
-  "Daebritz.": "Rudolf Daebritz",
   "Daebritz-Funaioli.": [
     "Rudolf Daebritz",
     "Gino Funaioli"
   ],
+  "Daebritz.": "Rudolf Daebritz",
   "Dahlmann": "Hellfried Dahlmann",
   "Dahms.": "Rudolf Dahms| (1880–1959)",
   "Daicoviciu": "Constantin Daicoviciu",
@@ -375,6 +375,7 @@
   "Dombart": "Theodor Dombart",
   "Dombart.": "Theodor Dombart",
   "Dopp": "Ernst Dopp",
+  "Dopp.": "Ernst Dopp",
   "Dornseiff": "Franz Dornseiff",
   "Dorothea von Lunzer.": "Dorothea von Lunzer",
   "Dow": "Sterling Dow",
