Updating the register at 250912_080728

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -208,6 +208,7 @@
   "Bischoff.": "Ernst Bischoff",
   "Bittel": "Kurt Bittel",
   "Bitterauf.": "Karl Bitterauf",
+  "Björnbo.": "Axel Anthon Bjørnbo",
   "Bjørnbo": "Axel Anthon Bjørnbo",
   "Blumenthal": "Albrecht von Blumenthal",
   "Blümner": "Hugo Blümner",
