Updating the register at 250917_080721

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -608,6 +608,7 @@
   "Friedr. Schwenn.": "Friedrich Schwenn",
   "Friedr. Stählin.": "Friedrich Stählin",
   "Friedrich": "Johannes Friedrich",
+  "Friedrich Gisinger.": "Friedrich Gisinger",
   "Friedrich Lammert.": "Friedrich Lammert",
   "Friedrich Lenz.": "Friedrich Walter Lenz",
   "Friedrich Pfister.": "Friedrich Pfister",
@@ -1063,6 +1064,7 @@
   "John Eames.": "John Eames",
   "Johnson": "Jotham Johnson",
   "Jolles": "Johannes André Jolles",
+  "Jolles.": "André Jolles",
   "Jos. Fischer.": "Joseph Fischer| (Geograph)",
   "Josef Keil.": "Josef Keil",
   "Josef Krischan.": "Josef Krischan",
