adding combi author Seeck-Steinwenter.

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1890,6 +1890,10 @@
     "Otto Seeck",
     "Karl Praechter"
   ],
+  "Seeck-Steinwenter.": [
+    "Otto Seeck",
+    "Artur Steinwenter"
+  ],
   "Seeck.": "Otto Seeck",
   "Seel": "Otto Seel",
   "Seidl": "Erwin Seidl",
