Updating the register at 250919_080654

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -744,6 +744,7 @@
   "Gschwantler": "Kurt Gschwantler",
   "Gudeman": "Alfred Gudeman",
   "Gudeman.": "Alfred Gudeman",
+  "Gummerus.": "Herman Gummerus",
   "Gundel, Hans [Georg]": "Hans Georg Gundel",
   "Gundel, Wilhelm": "Wilhelm Gundel",
   "Gundel.": "Wilhelm Gundel",
@@ -1691,6 +1692,7 @@
   "R. Pittioni.": "Richard Pittioni",
   "R. Reitzenstein.": "Richard Reitzenstein",
   "Raddatz": "Georg Raddatz",
+  "Raddatz.": "Georg Raddatz",
   "Radermacher": "Ludwig Radermacher",
   "Radermacher.": "Ludwig Radermacher",
   "Radin": "Max Radin",
