Updating the register at 250920_080726

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -584,6 +584,7 @@
   "Fraenkel, Ernst": "Ernst Fraenkel",
   "Fraenkel.": "Siegmund Fraenkel",
   "Francotte": "Henri Francotte",
+  "Francotte.": "Henri Francotte",
   "Frank": "Eva Frank",
   "Frank Brommer.": "Frank Brommer",
   "Franke": "Alfred Franke",
@@ -749,21 +750,7 @@
   "Gundel, Wilhelm": "Wilhelm Gundel",
   "Gundel.": "Wilhelm Gundel",
   "Gunning": "Jan Gunning",
-  "Gunning.": {
-    "*": "Johannes Hermanus Gunning",
-    "II A,2": "Jan Gunning",
-    "III A,1": "Jan Gunning",
-    "IX,2": "Jan Gunning",
-    "S III": "Jan Gunning",
-    "X,2": "Jan Gunning",
-    "XI,1": "Jan Gunning",
-    "XI,2": "Jan Gunning",
-    "XII,1": "Jan Gunning",
-    "XII,2": "Jan Gunning",
-    "XIII,2": "Jan Gunning",
-    "XIV,1": "Jan Gunning",
-    "XV,1": "Jan Gunning"
-  },
+  "Gunning.": "Jan Gunning",
   "Gunter Wesener.": "Gunter Wesener",
   "Gustav Hölscher.": "Gustav Hölscher",
   "Gutenbrunner": "Siegfried Gutenbrunner",
