Updating the register at 250924_080717

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1325,6 +1325,7 @@
   "Lunzer": "Dorothea von Lunzer",
   "Luschnat": "Otto Luschnat",
   "Lübtow": "Ulrich von Lübtow",
+  "M. Avi-Yonah.": "Michael Avi-Yonah",
   "M. Besnier.": "Maurice Besnier",
   "M. C. P. Schmidt.": "Max C. P. Schmidt",
   "M. C. van der Kolf.": "Marie Christina van der Kolf",
