--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -980,6 +980,10 @@
   "Hörle": "Josef Hörle",
   "Hübner": "Emil Hübner",
   "Hübner.": "Emil Hübner",
+  "Hübner-Schulten.": [
+    "Emil Hübner",
+    "Adolf Schulten"
+  ]
   "Hülsen": "Christian Hülsen",
   "Hülsen.": "Christian Hülsen",
   "I. Heinemann.": "Isaak Heinemann",
