Updating the register at 251014_081007

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -805,6 +805,7 @@
   "Haebler.": "Albin Haebler",
   "Haedicke": "Walter Haedicke",
   "Hamburg": "Lisa Hamburg",
+  "Hamburg.": "Lisa Hamburg",
   "Hammer-Jensen": "Ingeborg Hammer-Jensen",
   "Hammer-Jensen.": "Ingeborg Hammer-Jensen",
   "Hammond": "Mason Hammond",
@@ -1902,6 +1903,7 @@
   "Sieveking": "Johannes Sieveking",
   "Sieveking.": "Johannes Sieveking",
   "Sigwart": "Georg Sigwart",
+  "Sigwart.": "Georg Sigwart",
   "Sittig": "Ernst Sittig",
   "Sittig.": "Ernst Sittig",
   "Sitzler.": "Jakob Sitzler",
