Updating the register at 251022_080937

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1184,6 +1184,7 @@
   "Kock": "Bernhard Kock",
   "Kock.": "Bernhard Kock",
   "Kohl": "Heinrich Kohl",
+  "Kohl.": "Heinrich Kohl",
   "Kolbe": "Walther Kolbe",
   "Kolbe-Bürchner.": "Walther Kolbe",
   "Kolbe.": "Walther Kolbe",
@@ -1568,6 +1569,7 @@
   "P. Kübler.": "Paul Kübler",
   "P. Maas.": "Paul Maas",
   "P. N. Ure.": "Percy Neville Ure",
+  "P. Riewald.": "Paul Riewald",
   "P. Schulten.": "Adolf Schulten",
   "P. Treves.": "Piero Treves",
   "P. Von der Mühll.": "Peter von der Mühll",
