Updating the register at 251028_080800

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1714,6 +1714,7 @@
   "Reinhard Büll. Ernst Moser.": "Reinhard Büll",
   "Reinhard Lullies.": "Reinhard Lullies",
   "Reinhardt": "Karl Reinhardt",
+  "Reinhardt.": "Karl Reinhardt",
   "Reinmuth": "Oscar William Reinmuth",
   "Reisch.": "Emil Reisch",
   "Reitzenstein": "Richard Reitzenstein",
