Updating the register at 251030_080808

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1873,6 +1873,7 @@
   "Schwahn.": "Walther Schwahn",
   "Schwartz.": "Eduard Schwartz",
   "Schwenn": "Friedrich Schwenn",
+  "Schwenn.": "Friedrich Schwenn",
   "Schwyzer": "Hans-Rudolf Schwyzer",
   "Schäfer": "Diedrich Schäfer",
   "Schön": "Georg Schön",
