Updating the register at 251101_080751

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1543,6 +1543,7 @@
   "Oppermann": "Hans Oppermann",
   "Oppermann.": "Hans Oppermann",
   "Orinsky": "Kurt Orinsky",
+  "Orinsky.": "Kurt Orinsky",
   "Orth": "Ferdinand Orth",
   "Orth.": "Ferdinand Orth",
   "Ostern.": "Hermann Ostern",
