Updating the register at 251102_080806

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -2166,6 +2166,7 @@
   "Weicker.": "Georg Weicker",
   "Weidlich.": "Theodor Weidlich",
   "Weidner": "Ernst Friedrich Weidner",
+  "Weidner.": "Ernst Friedrich Weidner",
   "Weinberger": "Wilhelm Weinberger",
   "Weinberger.": "Wilhelm Weinberger",
   "Weinel.": "Heinrich Weinel",
