Updating the register at 251103_080811

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -199,6 +199,7 @@
   "Bickermann": "Elias Bickermann",
   "Bidez.": "Joseph Bidez",
   "Bieber": "Margarete Bieber",
+  "Bieber.": "Margarete Bieber",
   "Bigott.": "Edmund Bigott",
   "Bilabel": "Friedrich Bilabel",
   "Bilabel.": "Friedrich Bilabel",
@@ -246,6 +247,7 @@
   "Bremer.": "Walther Bremer",
   "Brink": "Karl Oskar Brink",
   "Broholm": "Hans Christian Broholm",
+  "Broholm.": "Hans Christian Broholm",
   "Brommer": "Frank Brommer",
   "Brommer.": "Frank Brommer",
   "Bruck": "Eberhard Friedrich Bruck",
@@ -1272,6 +1274,7 @@
   "Lammert, Friedrich": "Friedrich Lammert",
   "Lammert.": "Edmund Lammert",
   "Lange": "Edmund Lange",
+  "Lange.": "Edmund Lange",
   "Laqueur": "Richard Laqueur",
   "Laqueur.": "Richard Laqueur",
   "Larsen": "Jakob Aall Ottesen Larsen",
