Updating the register at 251106_081020

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1303,6 +1303,7 @@
   "Lerat": "Lucien Lerat",
   "Lesky": "Albin Lesky",
   "Levick": "Barbara Levick",
+  "Levy.": "Friedrich Walter Lenz",
   "Lieben": "Eugen Lieben",
   "Lieben.": "Eugen Lieben",
   "Liebenam": "Wilhelm Liebenam",
