Updating the register at 251108_080928

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1239,6 +1239,7 @@
   "Kunkel, Wolfgang": "Wolfgang Kunkel",
   "Kunnert.": "Heinrich Kunnert",
   "Kunst": "Karl Kunst",
+  "Kunst. ✝": "Karl Kunst",
   "Kurfess": "Alfons Kurfess",
   "Kurt Bardong.": "Kurt Bardong",
   "Kurt Gschwantler.": "Kurt Gschwantler",
