Updating the register at 251113_080926

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -14,6 +14,7 @@
     "Adolf Jülicher",
     "Hans-Georg Opitz"
   ],
+  "A. Kappelmacher.": "Alfred Kappelmacher",
   "A. Körte.": "Alfred Körte",
   "A. L. F. Rivet.": "Albert Lionel Frederick Rivet",
   "A. Lippold.": "Adolf Lippold",
@@ -401,6 +402,7 @@
   "Dörner": "Friedrich Karl Dörner",
   "Dörrie": "Heinrich Dörrie",
   "Dörries": "Hermann Dörries",
+  "Dörries.": "Hermann Dörries",
   "Düll": "Rudolf Düll",
   "Düll.": "Rudolf Düll",
   "Dümmler.": "Ferdinand Dümmler",
@@ -659,6 +661,7 @@
   "Gams": "Helmut Gams",
   "Ganschinietz": "Richard Ganschinietz",
   "Ganschinietz.": "Richard Ganschinietz",
+  "Ganszyiniec.": "Richard Ganschinietz",
   "Ganszyniec.": "Richard Ganschinietz",
   "Gardthausen": "Viktor Gardthausen",
   "Gardthausen.": "Viktor Gardthausen",
@@ -1239,6 +1242,7 @@
   "Kunkel, Wolfgang": "Wolfgang Kunkel",
   "Kunnert.": "Heinrich Kunnert",
   "Kunst": "Karl Kunst",
+  "Kunst. †": "Karl Kunst",
   "Kunst. ✝": "Karl Kunst",
   "Kurfess": "Alfons Kurfess",
   "Kurt Bardong.": "Kurt Bardong",
@@ -1303,6 +1307,7 @@
   "Leonhard.": "Rudolf Leonhard| (Jurist)",
   "Lerat": "Lucien Lerat",
   "Lesky": "Albin Lesky",
+  "Lesky.": "Albin Lesky",
   "Levick": "Barbara Levick",
   "Levy.": "Friedrich Walter Lenz",
   "Lieben": "Eugen Lieben",
@@ -1653,6 +1658,7 @@
   "Pley": "Jakob Pley",
   "Pley.": "Jakob Pley",
   "Plöbst": "Walter Plöbst",
+  "Plöbst.": "Walter Plöbst",
   "Plümacher": "Eckhard Plümacher",
   "Pohlenz": "Max Pohlenz",
   "Poland": "Franz Poland",
@@ -1926,6 +1932,7 @@
   "Sommer": "Leopold Sommer",
   "Sommer.": "Leopold Sommer",
   "Sonnenburg": "Peter E. Sonnenburg",
+  "Sonnenburg.": "Peter Sonnenburg",
   "Sonnet": "Paul Sonnet",
   "Sonnet.": "Paul Sonnet",
   "Sontheimer": "Walther Sontheimer",
