Updating the register at 251115_080952

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1242,6 +1242,7 @@
   "Kunkel, Wolfgang": "Wolfgang Kunkel",
   "Kunnert.": "Heinrich Kunnert",
   "Kunst": "Karl Kunst",
+  "Kunst †.": "Karl Kunst",
   "Kunst. †": "Karl Kunst",
   "Kunst. ✝": "Karl Kunst",
   "Kurfess": "Alfons Kurfess",
@@ -2324,6 +2325,7 @@
   "v. Wotawa.": "August von Wotawa",
   "v. d. Kolf.": "Marie Christina van der Kolf",
   "v. d. Waerden.": "Bartel Leendert van der Waerden",
+  "van Wageningen †.": "Jacobus van Wageningen",
   "van der Kolf.": "Marie Christina van der Kolf",
   "Ürögdi": "György Ürögdi",
   "Šašel": "Jaroslav Šašel"
