Updating the register at 251116_081016

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1761,6 +1761,7 @@
   "Rolland": "Henri Rolland",
   "Roman Stiglitz.": "Roman Stiglitz",
   "Rommel": "Hans Rommel",
+  "Rommel.": "Hans Rommel",
   "Rosa Söder.": "Rosa Söder",
   "Rosenberg": "Arthur Rosenberg",
   "Rosenberg.": "Arthur Rosenberg",
