Updating the register at 251118_080951

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -470,6 +470,7 @@
   "Eitrem": "Samson Eitrem",
   "Eitrem.": "Samson Eitrem",
   "Eltester": "Walther Eltester",
+  "Eltester.": "Walther Eltester",
   "Emil Kießling.": "Emil Kießling",
   "Enking": "Ragna Enking",
   "Enßlin": "Wilhelm Enßlin",
@@ -922,6 +923,7 @@
     "*": "Albert Herrmann",
     "S XIV": "Hans-Volkmar Herrmann"
   },
+  "Herrmann Dörries.": "Hermann Dörries",
   "Herrmann.": "Albert Herrmann",
   "Herter": "Hans Herter",
   "Herzog": "Gertrud Herzog-Hauser",
