Updating the register at 251119_080944

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -85,6 +85,7 @@
   "Anneliese Modrze.": "Annelise Modrze",
   "Annelise Modrze.": "Annelise Modrze",
   "Arbesmann": "P.ater Rudolph Arbesmann",
+  "Arbesmann.": "Rudolph Arbesmann",
   "Arendt †.": "Fritz Arendt",
   "Arnim": "Hans von Arnim",
   "Arnold Ehrhardt.": "Arnold Ehrhardt",
@@ -198,6 +199,7 @@
   "Beutler": "Rudolf Beutler",
   "Bezold.": "Carl Bezold",
   "Bickermann": "Elias Bickermann",
+  "Bickermann.": "Elias Bickermann",
   "Bidez.": "Joseph Bidez",
   "Bieber": "Margarete Bieber",
   "Bieber.": "Margarete Bieber",
@@ -1004,6 +1006,7 @@
   "Ingeborg Scheibler.": "Ingeborg Scheibler",
   "Ingemar Düring.": "Ingemar Düring",
   "Instinsky": "Hans Ulrich Instinsky",
+  "J. Andrée.": "Judith Andrée-Hanslik",
   "J. Bleicken.": "Jochen Bleicken",
   "J. Duchesne-Guillemin.": "Jacques Duchesne-Guillemin",
   "J. E. Fontenrose.": "Joseph Eddy Fontenrose",
@@ -1693,6 +1696,7 @@
   "Quandt.": "Wilhelm Quandt",
   "Quoniam": "Pierre Quoniam",
   "R. Delbrück.": "Richard Delbrück",
+  "R. Hanslik.": "Rudolf Hanslik",
   "R. Hartmann.": "Richard Hartmann",
   "R. Helm.": "Rudolf Helm",
   "R. Leonhard.": "Rudolf Leonhard| (Jurist)",
@@ -2123,6 +2127,7 @@
   "W. Kubitschek.": "Wilhelm Kubitschek",
   "W. L. Westermann.": "William Linn Westermann",
   "W. Morel.": "Willy Morel",
+  "W. Nestle.": "Wilhelm Nestle",
   "W. Peek.": "Werner Peek",
   "W. Riemschneider.": "Wilhelm Riemschneider",
   "W. Ruge.": "Walther Ruge",
@@ -2200,6 +2205,7 @@
   "Wellmann, E[duard]": "Eduard Wellmann",
   "Wellmann, M[ax]": "Max Wellmann",
   "Wendel": "Carl Wendel",
+  "Wendel.": "Carl Wendel",
   "Wendling.": "Emil Wendling",
   "Wenger": "Leopold Wenger",
   "Wenger.": "Leopold Wenger",
