Updating the register at 251120_081030

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -282,7 +282,10 @@
   "Bömer": "Franz Bömer",
   "Büchner": "Karl Büchner",
   "Bürchner": "Ludwig Bürchner",
-  "Bürchner und Philippson.": "Ludwig Bürchner",
+  "Bürchner und Philippson.": [
+    "Ludwig Bürchner",
+    "Alfred Philippson"
+  ],
   "Bürchner.": "Ludwig Bürchner",
   "Büttner-Wobst.": "Theodor Büttner-Wobst",
   "C. A. Forbes.": "Clarence Allen Forbes",
@@ -521,8 +524,7 @@
   "F. Marx.": "Friedrich Marx| (Philologe)",
   "F. Miltner.": "Franz Miltner",
   "F. Münzer – H. Gundel.": [
-    "Friedrich Münzer",
-    "Hans Georg Gundel"
+    "Friedrich Münzer"
   ],
   "F. Münzer.": "Friedrich Münzer",
   "F. Poland.": "Franz Poland",
@@ -723,6 +725,10 @@
   "Goldfinger.": "Robert Goldfinger",
   "Gordon": "Arthur Ernest Gordon",
   "Gossen": "Hans Gossen",
+  "Gossen-Kind.": [
+    "Hans Gossen",
+    "Friedrich Ernst Kind"
+  ],
   "Gossen-Steier.": [
     "Hans Gossen",
     "August Steier"
@@ -765,7 +771,7 @@
   "Gärtner": "Hans Gärtner",
   "Gärtner & Wünsch.": [
     "Hans Gärtner",
-    "Albert Wünsch"
+    "Richard Wünsch"
   ],
   "Gärtner.": "Hans Gärtner",
   "Géza Alföldy.": "Géza Alföldy",
@@ -805,7 +811,9 @@
   "H.-J. Diesner.": "Hans-Joachim Diesner",
   "H.-O. Kröner.": "Hans-Otto Kröner",
   "H.-P. Drögemüller.": "Hans-Peter Drögemüller",
-  "H.G. A.W.": "Hans Gärtner",
+  "H.G. A.W.": [
+    "Hans Gärtner"
+  ],
   "Habel": "Paul Habel",
   "Habel.": "Paul Habel",
   "Habermehl": "Helmut Habermehl",
@@ -1142,6 +1150,10 @@
   "Kettler": "Franz-Heinrich Kettler",
   "Keune": "Johann Baptist Keune",
   "Keune.": "Johann Baptist Keune",
+  "Keune.-Philipp.": [
+    "Johann Baptist Keune",
+    "Hans Philipp"
+  ],
   "Keydell": "Rudolf Keydell",
   "Keydell.": "Rudolf Keydell",
   "Keyßner": "Karl Keyßner",
@@ -1196,7 +1208,10 @@
   "Kohl": "Heinrich Kohl",
   "Kohl.": "Heinrich Kohl",
   "Kolbe": "Walther Kolbe",
-  "Kolbe-Bürchner.": "Walther Kolbe",
+  "Kolbe-Bürchner.": [
+    "Walther Kolbe",
+    "Ludwig Bürchner"
+  ],
   "Kolbe.": "Walther Kolbe",
   "Kolf": "Marie Christina van der Kolf",
   "Kolf.": "Marie Christina van der Kolf",
@@ -1228,6 +1243,10 @@
   "Kroll-Tambornino.": [
     "Wilhelm Kroll",
     "Julius Tambornino"
+  ],
+  "Kroll-Wernicke.": [
+    "Wilhelm Kroll",
+    "Konrad Wernicke"
   ],
   "Kroll.": "Wilhelm Kroll",
   "Kroymann": "Jürgen Kroymann",
@@ -1305,6 +1324,10 @@
   "Lengle.": "Joseph Lengle",
   "Lenk": "Brunhilde Lenk",
   "Lenschau": "Thomas Lenschau",
+  "Lenschau-Nachod.": [
+    "Thomas Lenschau",
+    "Hans Nachod"
+  ],
   "Lenschau.": "Thomas Lenschau",
   "Lenz": "Friedrich Walter Lenz",
   "Leonard": "Friedrich Leonard",
@@ -1433,6 +1456,10 @@
   "Miller": "Julius Miller",
   "Miltner, Franz": "Franz Miltner",
   "Miltner, Helene": "Helene Miltner",
+  "Miltner-Berger.": [
+    "Franz Miltner",
+    "Ernst Hugo Berger"
+  ],
   "Miltner.": "Franz Miltner",
   "Mittelhaus": "Karl Mittelhaus",
   "Mittelhaus.": "Karl Mittelhaus",
@@ -1467,6 +1494,10 @@
   "Münzer und Vonder Mühll.": [
     "Friedrich Münzer",
     "Friedrich von der Mühll"
+  ],
+  "Münzer-Stein.": [
+    "Friedrich Münzer",
+    "Arthur Stein"
   ],
   "Münzer.": "Friedrich Münzer",
   "Müri": "Walter Müri",
@@ -1504,6 +1535,10 @@
     "S V": "Alfred Nagl",
     "XI,1": "Alfred Nagl"
   },
+  "Nagl–Münzer.": [
+    "Maria Assunta Nagl",
+    "Friedrich Münzer"
+  ],
   "Nap": "Jacobus Matthijs Nap",
   "Natorp": "Paul Natorp",
   "Natorp.": "Paul Natorp",
@@ -1730,7 +1765,10 @@
   "Reincke": "Gerhard Reincke",
   "Reincke.": "Gerhard Reincke",
   "Reinhard Büll.": "Reinhard Büll",
-  "Reinhard Büll. Ernst Moser.": "Reinhard Büll",
+  "Reinhard Büll. Ernst Moser.": [
+    "Reinhard Büll",
+    "Ernst Moser"
+  ],
   "Reinhard Lullies.": "Reinhard Lullies",
   "Reinhardt": "Karl Reinhardt",
   "Reinhardt.": "Karl Reinhardt",
@@ -2122,6 +2160,9 @@
   "W. H. Gross.": "Walter Hatto Gross",
   "W. H. Groß.": "Walter Hatto Gross",
   "W. Hoffmann.": "Wilhelm Hoffmann",
+  "W. Kroll mit Zusätzen von Hobein in eckigen Klammern.": [
+    "Hermann Hobein"
+  ],
   "W. Kroll.": "Wilhelm Kroll",
   "W. Kubitschek †.": "Wilhelm Kubitschek",
   "W. Kubitschek.": "Wilhelm Kubitschek",
@@ -2136,7 +2177,6 @@
   "W. Schultz.": "Wolfgang Schultz",
   "W. Schur.": "Werner Schur",
   "W. Tomaschek † – Max Fluss.": [
-    "Wilhelm Tomaschek",
     "Max Fluß"
   ],
   "W. Tomaschek.": "Wilhelm Tomaschek",
@@ -2319,7 +2359,6 @@
   "v. Grienberger.": "Theodor von Grienberger",
   "v. Hiller.": "Friedrich Hiller von Gaertringen",
   "v. Jan und Graf.": [
-    "Karl von Jan",
     "Ernst Graf"
   ],
   "v. Jan.": "Karl von Jan",
