Updating the register at 251121_174704

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1027,6 +1027,7 @@
   "J. Miller.": "Julius Miller",
   "J. Oehler.": "Johann Oehler",
   "J. Papastavrou.": "Johannes Papastavrou",
+  "J. Pley.": "Jakob Pley",
   "J. Schmidt.": {
     "*": "Johannes Schmidt (Epigraphiker)",
     "XV,2": "Johannes Schmidt (Philologe)",
@@ -1189,6 +1190,7 @@
   "Kletzel": "Wolfgang Kletzel",
   "Kletzel.": "Wolfgang Kletzel",
   "Kliem": "Fritz Kliem",
+  "Kliem.": "Fritz Kliem",
   "Klingmüller": "Fritz Klingmüller",
   "Klingmüller.": "Fritz Klingmüller",
   "Klinz": "Albert Klinz",
@@ -1830,6 +1832,7 @@
   "Rumpf": "Andreas Rumpf",
   "Rupprecht": "Karl Rupprecht",
   "Rusch": "Adolf Rusch",
+  "Rusch.": "Adolf Rusch",
   "Rzach": "Alois Rzach",
   "Rzach.": "Alois Rzach",
   "Ræder": "Hans Ræder",
@@ -2300,6 +2303,7 @@
   "Witte": "Kurt Witte",
   "Witte.": "Kurt Witte",
   "Wittig": "Karl Wittig",
+  "Wittig.": "Karl Wittig",
   "Wißmann": "Hermann von Wißmann",
   "Wlassak.": "Moriz Wlassak",
   "Wm. A. Oldfather.": "William Abbott Oldfather",
