Updating the register at 251125_080946

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -524,7 +524,8 @@
   "F. Marx.": "Friedrich Marx| (Philologe)",
   "F. Miltner.": "Franz Miltner",
   "F. Münzer – H. Gundel.": [
-    "Friedrich Münzer"
+    "Friedrich Münzer",
+    "Hans Georg Gundel"
   ],
   "F. Münzer.": "Friedrich Münzer",
   "F. Poland.": "Franz Poland",
@@ -770,8 +771,7 @@
   "Gutenbrunner": "Siegfried Gutenbrunner",
   "Gärtner": "Hans Gärtner",
   "Gärtner & Wünsch.": [
-    "Hans Gärtner",
-    "Richard Wünsch"
+    "Hans Gärtner"
   ],
   "Gärtner.": "Hans Gärtner",
   "Géza Alföldy.": "Géza Alföldy",
@@ -812,7 +812,8 @@
   "H.-O. Kröner.": "Hans-Otto Kröner",
   "H.-P. Drögemüller.": "Hans-Peter Drögemüller",
   "H.G. A.W.": [
-    "Hans Gärtner"
+    "Hans Gärtner",
+    "Albert Wünsch"
   ],
   "Habel": "Paul Habel",
   "Habel.": "Paul Habel",
@@ -1211,7 +1212,6 @@
   "Kohl.": "Heinrich Kohl",
   "Kolbe": "Walther Kolbe",
   "Kolbe-Bürchner.": [
-    "Walther Kolbe",
     "Ludwig Bürchner"
   ],
   "Kolbe.": "Walther Kolbe",
@@ -1289,7 +1289,10 @@
   "Kübler, Paul": "Paul Kübler",
   "Kübler.": "Bernhard Kübler",
   "L. Nagy.": "Lajos Nagy",
-  "L. Schmidt.": "Leopold Schmidt",
+  "L. Schmidt.": [
+    "Leopold Schmidt",
+    "Richard Reitzenstein"
+  ],
   "L. W. Daly.": "Lloyd William Daly",
   "L. Ziehen.": "Ludwig Ziehen",
   "Lackeit": "Conrad David Eberhard Lackeit",
@@ -2164,7 +2167,7 @@
   "W. H. Groß.": "Walter Hatto Gross",
   "W. Hoffmann.": "Wilhelm Hoffmann",
   "W. Kroll mit Zusätzen von Hobein in eckigen Klammern.": [
-    "Hermann Hobein"
+    "Wilhelm Kroll"
   ],
   "W. Kroll.": "Wilhelm Kroll",
   "W. Kubitschek †.": "Wilhelm Kubitschek",
@@ -2180,6 +2183,7 @@
   "W. Schultz.": "Wolfgang Schultz",
   "W. Schur.": "Werner Schur",
   "W. Tomaschek † – Max Fluss.": [
+    "Wilhelm Tomaschek",
     "Max Fluß"
   ],
   "W. Tomaschek.": "Wilhelm Tomaschek",
@@ -2363,6 +2367,7 @@
   "v. Grienberger.": "Theodor von Grienberger",
   "v. Hiller.": "Friedrich Hiller von Gaertringen",
   "v. Jan und Graf.": [
+    "Karl von Jan",
     "Ernst Graf"
   ],
   "v. Jan.": "Karl von Jan",
