Updating the register at 251126_081141

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1212,6 +1212,7 @@
   "Kohl.": "Heinrich Kohl",
   "Kolbe": "Walther Kolbe",
   "Kolbe-Bürchner.": [
+    "Walther Kolbe",
     "Ludwig Bürchner"
   ],
   "Kolbe.": "Walther Kolbe",
@@ -2167,7 +2168,8 @@
   "W. H. Groß.": "Walter Hatto Gross",
   "W. Hoffmann.": "Wilhelm Hoffmann",
   "W. Kroll mit Zusätzen von Hobein in eckigen Klammern.": [
-    "Wilhelm Kroll"
+    "Wilhelm Kroll",
+    "Hermann Hobein"
   ],
   "W. Kroll.": "Wilhelm Kroll",
   "W. Kubitschek †.": "Wilhelm Kubitschek",
