Updating the register at 251201_081047

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -15,6 +15,7 @@
     "Hans-Georg Opitz"
   ],
   "A. Kappelmacher.": "Alfred Kappelmacher",
+  "A. Koerte.": "Alfred Körte",
   "A. Körte.": "Alfred Körte",
   "A. L. F. Rivet.": "Albert Lionel Frederick Rivet",
   "A. Lippold.": "Adolf Lippold",
@@ -459,6 +460,7 @@
   "Ed. Meyer.": "Eduard Meyer",
   "Edelstein": "Ludwig Edelstein",
   "Edmund Buchner.": "Edmund Buchner",
+  "Edmund Groag.": "Edmund Groag",
   "Eduard Meyer.": "Eduard Meyer",
   "Effenterre": "Henri van Effenterre",
   "Eger.": "Otto Eger",
@@ -509,6 +511,7 @@
   "Eva Fiesel.": "Eva Fiesel",
   "Eva Frank.": "Eva Frank",
   "Eva Tolde.": "Eva Tolde",
+  "F. Alexander.": "Ferdinand Alexander",
   "F. Baumgarten.": "Fritz Baumgarten",
   "F. Brommer.": "Frank Brommer",
   "F. Bölte.": "Felix Bölte",
@@ -650,6 +653,7 @@
   "G. Körte": "Gustav Körte",
   "G. Körte.": "Gustav Körte",
   "G. Lippold.": "Georg Lippold",
+  "G. MacDonald.": "George MacDonald| (Numismatiker)",
   "G. Macdonald.": "George MacDonald| (Numismatiker)",
   "G. Mau.": "Georg Mau",
   "G. Meier.": "Gerhard Meier",
@@ -1108,6 +1112,7 @@
   "K. Orinsky.": "Kurt Orinsky",
   "K. Praechter.": "Karl Praechter",
   "K. Regling.": "Kurt Regling",
+  "K. Rupprecht.": "Karl Rupprecht",
   "K. Scherling.": "Karl Scherling",
   "K. Schneider.": "Karl Schneider",
   "K. Ziegler.": "Konrat Ziegler",
@@ -1129,6 +1134,7 @@
   "Karl Hoppe.": "Karl Hoppe",
   "Karl Keyßner.": "Karl Keyßner",
   "Karl Preisendanz.": "Karl Preisendanz",
+  "Karl Rupprecht.": "Karl Rupprecht",
   "Karl Schaefer.": "Karl Schäfer",
   "Karl Scherling.": "Karl Scherling",
   "Karl Tümpel.": "Karl Tümpel",
@@ -1430,6 +1436,7 @@
   "Max Fluss.": "Max Fluß",
   "Max Fluß.": "Max Fluß",
   "Max Hofmann.": "Max Hofmann",
+  "Max Kaser.": "Max Kaser",
   "Max Treu.": "Max Treu",
   "Maximilian Mayer.": "Maximilian Mayer",
   "Mayer": "Maximilian Mayer",
@@ -2160,6 +2167,7 @@
   "W. Capelle.": "Wilhelm Capelle",
   "W. Crönert.": "Wilhelm Crönert",
   "W. Ehlers.": "Wilhelm Ehlers",
+  "W. Eltester.": "Walther Eltester",
   "W. Enßlin.": "Wilhelm Enßlin",
   "W. F. Otto.": "Walter F. Otto",
   "W. Fröhner.": "Wilhelm Fröhner",
@@ -2241,6 +2249,7 @@
   "Weinberger.": "Wilhelm Weinberger",
   "Weinel.": "Heinrich Weinel",
   "Weinreich": "Otto Weinreich",
+  "Weinreich.": "Otto Weinreich",
   "Weinstock": "Stefan Weinstock",
   "Weinstock.": "Stefan Weinstock",
   "Weiser": "Artur Weiser",
