--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 jobs:
-  build-and-test:
+  register-integrity:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
