Updating the register at 251203_081041

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -619,6 +619,7 @@
   "Fridolf Kudlien.": "Fridolf Kudlien",
   "Friedländer": "Paul Friedländer",
   "Friedländer.": "Paul Friedländer",
+  "Friedr. Lenz.": "Friedrich Walter Lenz",
   "Friedr. Schwenn.": "Friedrich Schwenn",
   "Friedr. Stählin.": "Friedrich Stählin",
   "Friedrich": "Johannes Friedrich",
@@ -1761,6 +1762,10 @@
   "Radinger": "Karl Radinger von Radinghofen",
   "Radke": "Gerhard Radke",
   "Radnóti": "Aladár Radnóti",
+  "Raeder-Deichgräber.": [
+    "Hans Ræder",
+    "Karl Deichgräber"
+  ],
   "Raeder.": "Hans Ræder",
   "Rappaport": "Bruno Rappaport",
   "Rappaport.": "Bruno Rappaport",
@@ -2190,6 +2195,7 @@
   "W. Ruge.": "Walther Ruge",
   "W. Schleiermacher.": "Wilhelm Schleiermacher",
   "W. Schmid.": "Wilhelm Schmid",
+  "W. Schmidt.": "Wilhelm Schmidt",
   "W. Schultz.": "Wolfgang Schultz",
   "W. Schur.": "Werner Schur",
   "W. Tomaschek † – Max Fluss.": [
