author_mappings.json fixed

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -85,7 +85,7 @@
   "Anger": "Irma s. Lorentz Anger",
   "Anneliese Modrze.": "Annelise Modrze",
   "Annelise Modrze.": "Annelise Modrze",
-  "Arbesmann": "P.ater Rudolph Arbesmann",
+  "Arbesmann": "Rudolph Arbesmann",
   "Arbesmann.": "Rudolph Arbesmann",
   "Arendt †.": "Fritz Arendt",
   "Arnim": "Hans von Arnim",
@@ -1996,7 +1996,7 @@
   "Solmsen": "Friedrich Solmsen",
   "Sommer": "Leopold Sommer",
   "Sommer.": "Leopold Sommer",
-  "Sonnenburg": "Peter E. Sonnenburg",
+  "Sonnenburg": "Peter Sonnenburg",
   "Sonnenburg.": "Peter Sonnenburg",
   "Sonnet": "Paul Sonnet",
   "Sonnet.": "Paul Sonnet",
