Updating the register at 251204_080937

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -2365,6 +2365,10 @@
   "Ziebarth.": "Erich Ziebarth",
   "Ziegler": "Konrat Ziegler",
   "Ziegler.": "Konrat Ziegler",
+  "Ziegler–Bürchner.": [
+    "Konrat Ziegler",
+    "Ludwig Bürchner"
+  ],
   "Ziehen": "Ludwig Ziehen",
   "Ziehen.": "Ludwig Ziehen",
   "Zieseniss.": "Alexander Zieseniss",
@@ -2390,6 +2394,7 @@
   "v. Jan.": "Karl von Jan",
   "v. Kotz-Dobrž.": "Wolfgang von Kotz-Dobrž",
   "v. Lorentz.": "Friedrich von Lorentz",
+  "v. Netoliczka.": "Adelheid von Netoliczka-Baldershofen",
   "v. Petrikovits.": "Harald von Petrikovits",
   "v. Premerstein.": "Anton von Premerstein",
   "v. Radinger.": "Karl Radinger von Radinghofen",
