Updating the register at 251206_080929

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1573,6 +1573,7 @@
   "Niese": "Benedikt Niese",
   "Niese.": "Benedikt Niese",
   "Nilsson": "Martin Persson Nilsson",
+  "Nilsson.": "Martin Persson Nilsson",
   "Nock": "Arthur Darby Nock",
   "Norbert Heger.": "Norbert Heger",
   "Nöldeke.": "Theodor Nöldeke",
