Updating the register at 251208_081251

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -225,6 +225,7 @@
   "Boerner.": "Adolf Boerner",
   "Boethius": "Axel Boethius",
   "Boetzkes": "Reinhard Boetzkes",
+  "Boetzkes.": "Reinhard Boetzkes",
   "Boll": "Franz Boll",
   "Boll.": "Franz Boll| (Philologe)",
   "Bolla": "Sibylle von Bolla-Kotek",
@@ -1594,6 +1595,7 @@
   "Oehler, R[aimund]": "Raimund Oehler",
   "Oehler.": "Johann Oehler",
   "Oertel": "Friedrich Oertel",
+  "Oertel.": "Friedrich Oertel",
   "Olck": "Franz Olck",
   "Olck-Steier.": [
     "Franz Olck",
