Updating the register at 251209_081227

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -688,6 +688,10 @@
   "Geffcken": "Johannes Geffcken",
   "Geffcken.": "Johannes Geffcken| (Philologe)",
   "Geiger": "Friedrich Geiger",
+  "Geiger-Stählin.": [
+    "Friedrich Geiger",
+    "Friedrich Stählin"
+  ],
   "Geiger.": "Friedrich Geiger",
   "Geisau": "Hans von Geisau",
   "Gelzer": "Matthias Gelzer",
@@ -2045,6 +2049,10 @@
   "Stenzel.": "Julius Stenzel",
   "Stephan": "Margarete Stephan",
   "Steuernagel": "Carl Steuernagel",
+  "Steuernagel Kees.": [
+    "Hermann Kees"
+  ],
+  "Steuernagel.": "Carl Steuernagel",
   "Stevan Josifović.": "Stevan Josifović",
   "Stevens": "Courtenay Edward Stevens",
   "Stiegler": "Herwig Stiegler",
