Updating the register at 251210_081136

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -2050,6 +2050,7 @@
   "Stephan": "Margarete Stephan",
   "Steuernagel": "Carl Steuernagel",
   "Steuernagel Kees.": [
+    "Carl Steuernagel",
     "Hermann Kees"
   ],
   "Steuernagel.": "Carl Steuernagel",
