Updating the register at 251213_080920

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -688,6 +688,10 @@
   "Geffcken": "Johannes Geffcken",
   "Geffcken.": "Johannes Geffcken| (Philologe)",
   "Geiger": "Friedrich Geiger",
+  "Geiger-Bürchner.": [
+    "Friedrich Geiger",
+    "Ludwig Bürchner"
+  ],
   "Geiger-Stählin.": [
     "Friedrich Geiger",
     "Friedrich Stählin"
