Updating the register at 251217_081022

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -769,6 +769,7 @@
   "Grohmann.": "Adolf Grohmann",
   "Gross": "Walter Hatto Gross",
   "Grosse": "Robert Grosse",
+  "Grosse.": "Robert Grosse",
   "Gruppe.": "Otto Gruppe",
   "Gschnitzer": "Fritz Gschnitzer",
   "Gschwantler": "Kurt Gschwantler",
@@ -1410,6 +1411,7 @@
   "Maas": "Paul Maas",
   "Maas.": "Paul Maas",
   "MacDonald": "George MacDonald",
+  "MacDonald.": "George MacDonald",
   "Macdonald.": "George MacDonald| (Numismatiker)",
   "Mackauer": "Wilhelm Mackauer",
   "Malten": "Ludolf Malten",
@@ -1727,6 +1729,7 @@
   "Plöbst.": "Walter Plöbst",
   "Plümacher": "Eckhard Plümacher",
   "Pohlenz": "Max Pohlenz",
+  "Pohlenz.": "Max Pohlenz",
   "Poland": "Franz Poland",
   "Poland.": "Franz Poland",
   "Polaschek": "Erich Polaschek",
