Updating the register at 251218_085427

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1075,6 +1075,9 @@
   "Jessen": "Otto Jessen",
   "Jessen.": "Otto Jessen",
   "Jirku": "Anton Jirku",
+  "Joh. Schmidt †.": [
+    "Johannes Schmidt (Epigraphiker)"
+  ],
   "Joh. Schmidt.": {
     "*": "Johannes Schmidt (Epigraphiker)",
     "III A,1": "Johannes Schmidt (Philologe)",
@@ -1931,6 +1934,10 @@
   },
   "Schubart": "Wilhelm Schubart",
   "Schulten": "Adolf Schulten",
+  "Schulten-Kroll.": [
+    "Adolf Schulten",
+    "Wilhelm Kroll"
+  ],
   "Schulten.": "Adolf Schulten",
   "Schulthess": "Otto Schulthess",
   "Schulthess.": "Otto Schulthess",
