Updating the register at 251223_135406

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1227,6 +1227,10 @@
   "Koch, Hugo": "Hugo Koch",
   "Koch.": "Emil Koch",
   "Kock": "Bernhard Kock",
+  "Kock-Kroll.": [
+    "Bernhard Kock",
+    "Wilhelm Kroll"
+  ],
   "Kock.": "Bernhard Kock",
   "Kohl": "Heinrich Kohl",
   "Kohl.": "Heinrich Kohl",
@@ -1258,6 +1262,7 @@
   "Krauss.": "Samuel Krauss",
   "Kreis-von Schaewen": "Renate Kreis-von Schaewen",
   "Kreller": "Hans Kreller",
+  "Kreller.": "Hans Kreller",
   "Kretschmer": "Konrad Kretschmer",
   "Krischan": "Josef Krischan",
   "Krischan.": "Josef Krischan",
@@ -1861,6 +1866,10 @@
   "Rudolf Keydell.": "Rudolf Keydell",
   "Rudolph": "Hans Rudolph",
   "Ruge": "Walther Ruge",
+  "Ruge-Honigmann.": [
+    "Walther Ruge",
+    "Ernst Honigmann"
+  ],
   "Ruge.": "Walther Ruge",
   "Rumpf": "Andreas Rumpf",
   "Rupprecht": "Karl Rupprecht",
@@ -2410,6 +2419,10 @@
   "v. Bissing.": "Friedrich Wilhelm von Bissing",
   "v. Blumenthal.": "Albrecht von Blumenthal",
   "v. Domaszewski.": "Alfred von Domaszewski",
+  "v. Geisau-Oberhummer.": [
+    "Hans von Geisau",
+    "Eugen Oberhummer"
+  ],
   "v. Geisau.": "Hans von Geisau",
   "v. Grienberger.": "Theodor von Grienberger",
   "v. Hiller.": "Friedrich Hiller von Gaertringen",
