Updating the register at 251224_092915

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1171,6 +1171,10 @@
   "Kern.": "Otto Kern",
   "Kettler": "Franz-Heinrich Kettler",
   "Keune": "Johann Baptist Keune",
+  "Keune-Macdonald.": [
+    "Johann Baptist Keune",
+    "George MacDonald"
+  ],
   "Keune.": "Johann Baptist Keune",
   "Keune.-Philipp.": [
     "Johann Baptist Keune",
@@ -1340,6 +1344,10 @@
   "Laqueur.": "Richard Laqueur",
   "Larsen": "Jakob Aall Ottesen Larsen",
   "Latte": "Kurt Latte",
+  "Latte-Fiesel.": [
+    "Kurt Latte",
+    "Eva Fiesel"
+  ],
   "Latte.": "Kurt Latte",
   "Lauffer": "Siegfried Lauffer",
   "Laum": "Bernhard Laum",
@@ -1580,6 +1588,7 @@
   "Nesselhauf": "Herbert Nesselhauf",
   "Nestle": "Wilhelm Nestle",
   "Netoliczka": "Adelheid von Netoliczka-Baldershofen",
+  "Netoliczka.": "Adelheid von Netoliczka-Baldershofen",
   "Neugebauer": "Otto Eduard Neugebauer",
   "Neumann": "Neumann",
   "Neumann, Alfred Richard": "Alfred Richard Neumann",
@@ -2099,6 +2108,10 @@
   "Stählin-Bürchner.": [
     "Friedrich Stählin",
     "Ludwig Bürchner"
+  ],
+  "Stählin-Oberhummer.": [
+    "Friedrich Stählin",
+    "Eugen Oberhummer"
   ],
   "Stählin.": "Friedrich Stählin",
   "Stöckle": "Albert Stöckle",
