Updating the register at 251225_092954

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -2188,6 +2188,7 @@
   "Vahlert": "Karola Vahlert",
   "Van der Kolf.": "Marie Christina van der Kolf",
   "Vančura": "Josef Vančura",
+  "Vančura.": "Josef Vančura",
   "Vetter, Emil": "Emil Vetter",
   "Vetter, Walther": "Walther Vetter",
   "Vetter.": "Emil Vetter",
