Updating the register at 251226_083933

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -98,6 +98,7 @@
   "Aulitzky.": "Karl Aulitzky",
   "Aust.": "Emil Aust",
   "Avi-Yonah": "Michael Avi-Yonah",
+  "Axel Boethius.": "Axel Boethius",
   "B. A. Müller.": "Bruno Albin Müller",
   "B. Kübler.": "Bernhard Kübler",
   "B. L. v. d. Waerden.": "Bartel Leendert van der Waerden",
@@ -224,6 +225,7 @@
   "Boerner": "Adolf Boerner",
   "Boerner.": "Adolf Boerner",
   "Boethius": "Axel Boethius",
+  "Boethius.": "Axel Boethius",
   "Boetzkes": "Reinhard Boetzkes",
   "Boetzkes.": "Reinhard Boetzkes",
   "Boll": "Franz Boll",
@@ -287,6 +289,10 @@
   "Bürchner und Philippson.": [
     "Ludwig Bürchner",
     "Alfred Philippson"
+  ],
+  "Bürchner-Wrede.": [
+    "Ludwig Bürchner",
+    "Walter Wrede"
   ],
   "Bürchner.": "Ludwig Bürchner",
   "Büttner-Wobst.": "Theodor Büttner-Wobst",
@@ -578,6 +584,10 @@
   "Fitzler.": "Kurt Fitzler",
   "Fleischer": "Robert Fleischer",
   "Fluss": "Max Fluß",
+  "Fluss-Philipp.": [
+    "Max Fluß",
+    "Hans Philipp"
+  ],
   "Fluss.": "Max Fluß",
   "Fluß.": "Max Fluß",
   "Foerster (†)-Münscher.": [
