Updating the register at 251228_082948

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1713,6 +1713,10 @@
   "Pfuhl.": "Ernst Pfuhl",
   "Pfund": "Günther Pfund",
   "Philipp": "Hans Philipp",
+  "Philipp-Cramer.": [
+    "Hans Philipp",
+    "Franz Cramer"
+  ],
   "Philipp.": "Hans Philipp| (Geograph)",
   "Philippson": {
     "*": "Robert Philippson",
