Updating the register at 251229_081606

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -541,6 +541,7 @@
   "F. Poland.": "Franz Poland",
   "F. Schachermeyr.": "Fritz Schachermeyr",
   "F. Schober.": "Friedrich Schober",
+  "F. Solmsen.": "Friedrich Solmsen",
   "F. Staehelin.": "Felix Stähelin",
   "F. Stoessl.": "Franz Stoessl",
   "F. Stählin.": "Friedrich Stählin",
@@ -2150,6 +2151,7 @@
   "Tambornino": "Julius Tambornino",
   "Tambornino.": "Julius Tambornino",
   "Taubenschlag": "Rafael Taubenschlag",
+  "Taubenschlag.": "Rafael Taubenschlag",
   "Teréz Olajos.": "Teréz Olajos",
   "Th. Hopfner.": "Theodor Hopfner",
   "Th. Lenschau.": "Thomas Lenschau",
