Updating the register at 251231_080922

--- a/registers/authors_mapping.json
+++ b/registers/authors_mapping.json
@@ -1365,6 +1365,7 @@
   "Laum.": "Bernhard Laum",
   "Leglay": "Marcel Leglay",
   "Lehmann-Hartleben": "Karl Lehmann-Hartleben",
+  "Lehmann-Hartleben.": "Karl Lehmann-Hartleben",
   "Lehmann-Haupt": "Carl F. Lehmann-Haupt",
   "Lehmann-Haupt.": "Carl F. Lehmann-Haupt",
   "Leifer": "Franz Leifer",
@@ -1383,6 +1384,10 @@
   "Leonard": "Friedrich Leonard",
   "Leonard.": "Friedrich Leonard",
   "Leonhard": "Rudolf Leonhard",
+  "Leonhard-Weiss.": [
+    "Rudolf Leonhard",
+    "Jakob Weiss"
+  ],
   "Leonhard.": "Rudolf Leonhard| (Jurist)",
   "Lerat": "Lucien Lerat",
   "Lesky": "Albin Lesky",
@@ -1592,6 +1597,7 @@
     "Friedrich Münzer"
   ],
   "Nap": "Jacobus Matthijs Nap",
+  "Nap.": "Jacobus Matthijs Nap",
   "Natorp": "Paul Natorp",
   "Natorp.": "Paul Natorp",
   "Nawrath": "Alfred Nawrath",
